--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header">
             <div class="logo"><a href="#!"><img src="img/Logo-full.svg" alt="Logo"></a></div>
             <nav class="nav">
-                <button class="lang">en</button>
+                <!-- <button class="lang">en</button> -->
                 <button class="burger"><img src="img/menu.svg" alt="burger menu"></button>
             </nav>
         </div>
@@ -50,6 +50,15 @@
             <div id="bgimage"></div>
         </div>
     </main>
+    <footer>
+        <div class="footer">
+            <p>©Nippliz, 2024</p>
+            <div class="socials">
+                <img src="./img/telegram.svg" alt="Telegram">
+                <img src="./img/instagram.svg" alt="Instagram">
+            </div>
+        </div>
+    </footer>
 
     <script src="script/lottie.js"></script>
     <script src="script/main.js"></script>
