--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header>
         <div class="header">
             <div class="logo"><a href="#!"><img src="img/Logo-full.svg" alt="Logo"></a></div>
+            <p style="color: red;">In development</p>
             <nav class="nav">
                 <!-- <button class="lang">en</button> -->
                 <button class="burger"><img src="img/menu.svg" alt="burger menu"></button>
